feat(componen) : Change banner component and add image component

--- a/src/component/atomic/text/text.scss
+++ b/src/component/atomic/text/text.scss
@@ -1,5 +1,6 @@
 .cp-text {
-    font-family: roboto;
+    font-family: 'Roboto', sans-serif;
+    color: #ffffff;
     margin: 0;
     padding: 0;
 
@@ -8,7 +9,7 @@
      */
 
     &--h1 {
-        font-size: 32px;
+        font-size: 38px;
     }
 
     &--h2 {
